# neoforge-legends

./: .gitignore  Cargo.toml  README.md  base-grid.html  fantasy.html  halloween.html  index.html  pets.html  vercel.json  viral.html  webpack.config.js
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  web-wasm.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  systems.rs  time.rs  types.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  main.rs
src/: combat.rs  crafting.rs  lib.rs  main.rs  map.rs  player.rs  ui.rs
templates/: README.md
templates/halloween/: index.html
templates/pets/: index.html
templates/viral/: index.html
web/: index.html  package.json
web/public/: manifest.json
