[workspace]
resolver = "2"
members = [
  "crates/game",
  "crates/core",
]

[workspace.package]
edition = "2021"
authors = ["NeoForge Legends Team"]
license = "MIT"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_winit", "png", "x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

