[workspace]
resolver = "2"
members = [
  "crates/game",
  "crates/core",
]

[workspace.package]
edition = "2021"
authors = ["NeoForge Legends Team"]
license = "MIT"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false }
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

