[package]
name = "neoforge-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_winit", "bevy_gltf", "png"] }
neoforge-core = { path = "../core" }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
wasm = []
