[package]
name = "neoforge-game"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoforge_game"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_winit",
  "bevy_render", 
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png"
] }
neoforge-core = { path = "../core" }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")']
dependencies = [
  "bevy/webgl2"
]

[features]
default = []
wasm = ["bevy/webgl2"]
